--- a/notebooks/1- EDA and Wrangling.ipynb
+++ b/notebooks/1- EDA and Wrangling.ipynb
@@ -1329,7 +1329,7 @@
    "id": "e124e4b7-2c41-4128-a561-32d041b5ca40",
    "metadata": {},
    "source": [
-    "#### The data is now wrangled and ready for engineering!"
+    "#### The dataset is now wrangled and ready for engineering!"
    ]
   }
  ],
